2007-01-15	Benedikt Meurer <benny@xfce.org>

	* exo-hal/exo-hal.c(exo_hal_volume_compute_display_name): Fix
	  compilation on adm64, using G_GUINT64_FORMAT instead of assuming
	  it's llu. Bug #2758.

2007-01-11	Benedikt Meurer <benny@xfce.org>

	* exo-mount/main.c(main): Fix unused label if HAL is not available.

2007-01-11	Benedikt Meurer <benny@xfce.org>

	* exo/exo-mount-point.c(exo_mount_point_list_match_configured): Fix
	  Linux build error.

2007-01-10	Benedikt Meurer <benny@xfce.org>

	* exo/exo-md5.c(exo_md5_digest_dup): Fix invalid usage of g_memdup().
	* exo/exo-mount-point.{c,h}, exo/Makefile.am, exo/exo.symbols,
	  exo/exo.h: Import new module ExoMountPoint, which handles the
	  retrieval of active or configured mount points. This was merged
	  here to avoid duplicating the code in several other applications.
	  For example, Thunar, exo-mount and thunar-volman included similar
	  code somehow. The code itself is highly platform-depend and so its
	  easier to manage it in a central place.
	* docs/reference/: Update reference manual.
	* exo-mount/: Use the functions from the ExoMountPoint module.
	* tests/: Add a test case for the ExoMountPoint module.
	* po/POTFILES.in: Add new files here.

2007-01-09	Benedikt Meurer <benny@xfce.org>

	* exo-hal/exo-hal.{c,h}: Add utility function exo_hal_udi_validate()
	  to validate HAL device UDIs (actually D-Bus object paths).
	* docs/reference/: Update reference manual.
	* exo-mount/main.c(main): Use exo_hal_udi_validate() to verify HAL
	  device UDIs passed on the command line.
	* po/libexo-0.3.pot, po/*.po: Merge new strings.
	* po/de.po: Update german translations.

2007-01-08	Benedikt Meurer <benny@xfce.org>

	* configure.in.in, exo-hal/exo-hal.c: Fix build with older HAL
	  versions. Fix build on amd64. Bug #2725.

2007-01-07	Benedikt Meurer <benny@xfce.org>

	* exo-mount/exo-mount-hal.c: Handle blank discs properly. Try to come
	  up with a usable error message if the user tries to mount a blank