@@ -1,5 +1,12 @@
 2007-01-15	Benedikt Meurer <benny@xfce.org>
 
+	* exo-mount/exo-mount-hal.c(exo_mount_hal_device_from_udi): Allow
+	  to use the drive UDIs for CD-ROMs, which don't implement the
+	  Volume interface, but have atleast one associated, that
+	  implements the Volume interface.
+
+2007-01-15	Benedikt Meurer <benny@xfce.org>
+
 	* exo-hal/exo-hal.c(exo_hal_volume_compute_display_name): Fix
 	  compilation on adm64, using G_GUINT64_FORMAT instead of assuming
 	  it's llu. Bug #2758.
